Fix Copyright alignment

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -23,7 +23,7 @@ p {
     font-size: 21px;
     color: grey;
 }
-p .copyright {
-    text-align: right;
+.copyright {
+    text-align: right !important;
     color: grey;
 }
